--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,7 @@ add_executable(busyring ring.cpp)
 
 find_package(arbor 0.10.0 CONFIG REQUIRED)
 
-CPMAddPackage(NAME json
-              GITHUB_REPOSITORY nlohmann/json
-              VERSION 3.11.2
-              OPTIONS "CMAKE_SUPPRESS_DEVELOPER_WARNINGS ON")
+set(JSON_Install OFF CACHE INTERNAL "")
+add_subdirectory(ext/json)
 
 target_link_libraries(busyring PRIVATE arbor::arbor arbor::arborio arbor::arborenv nlohmann_json::nlohmann_json)
