--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,16 +12,7 @@ add_executable(busyring ring.cpp)
 
 find_package(arbor 0.10.0 CONFIG REQUIRED)
 
-# Hack around dependency issues...
-set(UNITS_ENABLE_TESTS OFF CACHE INTERNAL "")
-set(UNITS_BUILD_STATIC_LIBRARY ON CACHE INTERNAL "")
-set(UNITS_BUILD_SHARED_LIBRARY OFF CACHE INTERNAL "")
-set(UNITS_BUILD_CONVERTER_APP OFF CACHE INTERNAL "")
-set(UNITS_BUILD_WEBSERVER OFF CACHE INTERNAL "")
-set(UNITS_INSTALL ON CACHE INTERNAL "")
-add_subdirectory("${PROJECT_SOURCE_DIR}/ext/units" "${PROJECT_BINARY_DIR}/ext/units")
-
 set(JSON_Install OFF CACHE INTERNAL "")
 add_subdirectory(ext/json)
 
-target_link_libraries(busyring PRIVATE arbor::arbor arbor::arborio arbor::arborenv nlohmann_json::nlohmann_json units::units)
+target_link_libraries(busyring PRIVATE arbor::arbor arbor::arborio arbor::arborenv nlohmann_json::nlohmann_json)
